Fixed author name spacing when it goes to multiple lines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1528,7 +1528,7 @@ article.post .post-meta,
   margin-top: 20px;
   text-align: center; }
   .author .post-title {
-    line-height: 25px; }
+    line-height: 45px; }
   .author .author-bio {
     *zoom: 1; }
     .author .author-bio:before, .author .author-bio:after {
