--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -107,7 +107,6 @@ article.post,
     max-width: none;
     margin: 0;
     padding: 0 5%;
-
   }
 
   @media (min-width: 968px) and (max-width: 1200px) {
@@ -169,7 +168,7 @@ article.post .post-meta,
   text-align: center;
 
   .post-title {
-    line-height: 25px;
+    line-height: 45px;
   }
 
   .author-bio {
